Fix scaling on mobile.

--- a/nuntius/src/index.scss
+++ b/nuntius/src/index.scss
@@ -1,6 +1,6 @@
 html, body, #root, main {
   font-family: sans-serif;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   overflow: hidden;
   padding: 0;
